force-app/main/default/objects/BillDetailExpenseItem__c/BillDetailExpenseItem__c.object-meta.xml
<CustomObject>
    <label>請求明細費目</label>
    <nameField>
        <displayFormat>BI-{000000000}</displayFormat>
        <label>請求明細費目ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>