force-app/main/default/objects/BillDetailExpenseItem__c/fields/ConsignmentFeeNote__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentFeeNote__c</fullName>
    <label>委託料備考</label>
    <type>TextArea</type>
</CustomField>