force-app/main/default/objects/BillDetailExpenseItem__c/fields/DecisionUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>DecisionUnitPrice__c</fullName>
    <label>取決め単価</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>