force-app/main/default/objects/BillDetailExpenseItem__c/fields/IsTaxRateDisplay__c.field-meta.xml
<CustomField>
    <fullName>IsTaxRateDisplay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>税率表示フラグ</label>
    <type>Checkbox</type>
</CustomField>