force-app/main/default/objects/BillDetailExpenseItem__c/fields/NotCalc__c.field-meta.xml
<CustomField>
    <fullName>NotCalc__c</fullName>
    <label>非計算</label>
    <length>255</length>
    <type>Text</type>
</CustomField>